syntax = "proto3";

package auth;

option go_package = "./internal/users/grpc/auth;auth";

service AuthService {
  rpc Register(AuthRequest) returns (TokenResponse);
  rpc Login(AuthRequest) returns (TokenResponse);
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
  rpc GetUserInfo(GetUserInfoRequest) returns (GetUserInfoResponse);
  rpc Logout(ValidateTokenRequest) returns (ValidateTokenResponse);
}

message AuthRequest {
  string email = 2;
  string password = 3;
}

message TokenResponse {
  string token = 1;
  string expires_at = 2;
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  string user_id = 1;
  bool valid = 2;
}

message GetUserInfoRequest {
  string token = 1;
}

message GetUserInfoResponse {
  string user_id = 1;
  string email = 2;
}
